# nightskyrunner

./: .flake8  .gitignore  README.md  mkdocs.yml  mypy.ini  process_test.py  pyproject.toml
.github/workflows/: tests.yml
demo/: manager.toml  process_runner.toml  run.py  status_runner.toml  thread_runner.toml  vars.toml
docs/: references.md
nightskyrunner/: #factories.py#  __init__.py  config.py  config_check.py  config_checkers.py  config_error.py  config_getter.py  config_value_error.py  configcheck.py  configcheckers.py  configuration.py  configuration_value_error.py  factories.py  import_dotted.py  manager.py  runner.py  shared_memory.py  status.py  types.py
tests/: test_compare.py  test_config_check.py  test_config_error.py  test_config_getter.py  test_factories.py  test_manager.py  test_runner.py  test_shared_memory.py  test_status.py
